[Backend] - Added integration Spec