@@ -1,8 +1,6 @@
 package com.hid.citysearch.config;
 
 import com.hid.citysearch.domain.City;
-import io.vavr.collection.List;
-import io.vavr.collection.Stream;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -11,6 +9,8 @@ import org.springframework.core.io.Resource;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Created by rmurugaian on 5/24/2018.
@@ -26,9 +26,10 @@ public class CitySearchAppConfiguration {
     @Bean
     public List<City> cities(@Value("${city.input}") Resource resource) throws Exception {
 
-        return Stream.ofAll(Files
-                .readAllLines(Paths.get(resource.getURI()), StandardCharsets.UTF_8))
+        return Files
+                .readAllLines(Paths.get(resource.getURI()), StandardCharsets.UTF_8)
+                .stream()
                 .map(name -> City.builder().name(name.toUpperCase()).build())
-                .toList();
+                .collect(Collectors.toList());
     }
 }
